--- a/src/metadata/post.html
+++ b/src/metadata/post.html
@@ -1,3 +1,7 @@
-<div>
-    fun with the superparticular series & variants, plus stepwise motion within recurring bounds
+<div class="row">
+    <div class="left">
+        fun with the superparticular series & variants, plus stepwise motion within recurring bounds
+    </div>
+
+    <div class="right"></div>
 </div>
