--- a/src/metadata/post.html
+++ b/src/metadata/post.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="left">
+    <div class="middle">
         <p>
             fun with the superparticular series & variants, plus stepwise motion within recurring bounds
         </p>
